--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -40,11 +40,11 @@ body {
     margin-top: 0px;
     margin-bottom: 50px;
     font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
+    font-size: 28px;
+    line-height: 1.18;
     text-align: center;
     letter-spacing: 0.03em;
-    color: var(--title-text-color);
+    color: $title-text-color;
   }
   &-title.centred {
     text-align: center;
@@ -57,10 +57,21 @@ body {
 
 @media screen and (min-width: 480px) {
   .container {
-    max-width: 480px;
+    .clients & {
+      padding-left: 0px;
+      padding-right: 0px;
+    }
+    padding-top: 0px;
+    width: 450px;
 
     .features & {
       display: flex;
+    }
+  }
+  .section {
+    .clients & {
+      padding-top: 0px;
+      padding-bottom: 0px;
     }
   }
 }
@@ -81,6 +92,7 @@ body {
     width: 1200px;
     .work & {
       display: block;
+      padding-bottom: 0px;
     }
   }
 
@@ -88,6 +100,7 @@ body {
     padding-top: 94px;
     padding-bottom: 94px;
     &-title.centred {
+      padding-top: 0px;
       text-align: center;
     }
     &.nopadding {
