--- a/css/main.css
+++ b/css/main.css
@@ -48,11 +48,11 @@ body {
   margin-top: 0px;
   margin-bottom: 50px;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
-  color: var(--title-text-color);
+  color: #212121;
 }
 
 .section-title.centred {
@@ -66,11 +66,19 @@ body {
 
 @media screen and (min-width: 480px) {
   .container {
-    width: 480px;
+    padding-top: 0px;
+    width: 450px;
   }
-  .clients .container,
+  .clients .container {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
   .features .container {
     display: flex;
+  }
+  .clients .section {
+    padding-top: 0px;
+    padding-bottom: 0px;
   }
 }
 
@@ -80,8 +88,6 @@ body {
   }
   .page-header .container,
   .features .container,
-  .work .container,
-  .team .container,
   .footer .container {
     display: flex;
   }
@@ -91,11 +97,16 @@ body {
   .container {
     width: 1200px;
   }
+  .work .container {
+    display: block;
+    padding-bottom: 0px;
+  }
   .section {
     padding-top: 94px;
     padding-bottom: 94px;
   }
   .section-title.centred {
+    padding-top: 0px;
     text-align: center;
   }
   .section.nopadding {
@@ -202,17 +213,6 @@ body {
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 250ms;
-}
-
-.section-title {
-  margin-top: 0px;
-  margin-bottom: 50px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #212121;
 }
 
 .subtitle {
@@ -510,18 +510,10 @@ body {
 }
 
 .hero {
-  background-repeat: no-repeat;
-  background-size: cover;
+  display: block;
   padding-top: 118px;
   padding-bottom: 118px;
   text-align: center;
-}
-
-.hero-bg {
-  margin: 0 auto;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/studio/hero/bg-mobile.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 
 .hero-title {
@@ -535,13 +527,54 @@ body {
   color: #ffffff;
 }
 
+@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px), screen and (min-resolution: 192dpi) and (max-width: 767px), screen and (min-resolution: 2dppx) and (max-width: 767px) {
+  .hero-bg {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/studio/hero/bg-mobile@2x.jpg");
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .hero-bg {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/studio/hero/bg-mobile.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero-bg {
+    flex-grow: 1;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/studio/hero/bg-tablet.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px), screen and (min-resolution: 192dpi) and (min-width: 768px), screen and (min-resolution: 2dppx) and (min-width: 768px) {
+  .hero-bg {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/studio/hero/bg-tablet@2x.jpg");
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .hero-bg {
+    margin: 0 auto;
     max-width: 1600px;
+    padding-bottom: 200px;
+    padding-bottom: 206px;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/studio/hero/bg-desktop.jpg");
   }
   .hero-title {
     font-size: 44px;
     line-height: 1.36;
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px), screen and (min-resolution: 192dpi) and (min-width: 1200px), screen and (min-resolution: 2dppx) and (min-width: 1200px) {
+  .hero-right-side {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/studio/hero/bg-desktop@2x.jpg");
   }
 }
 
@@ -555,10 +588,6 @@ body {
   color: #212121;
 }
 
-.features-list {
-  display: block;
-}
-
 .features-list-item {
   width: 100%;
 }
@@ -566,7 +595,6 @@ body {
 .features .bg-antena::before {
   content: "";
   display: block;
-  width: 450px;
   height: 120px;
   background-color: #f5f4fa;
   background-image: url("../images/studio/features/antenna 1.svg");
@@ -579,7 +607,6 @@ body {
 .features .bg-clock::before {
   content: "";
   display: block;
-  width: 450px;
   height: 120px;
   background-color: #f5f4fa;
   background-image: url("../images/studio/features/clock 1.svg");
@@ -592,7 +619,6 @@ body {
 .features .bg-diagram::before {
   content: "";
   display: block;
-  width: 450px;
   height: 120px;
   background-color: #f5f4fa;
   background-image: url("../images/studio/features/diagram 1.svg");
@@ -605,7 +631,6 @@ body {
 .features .bg-astronaut::before {
   content: "";
   display: block;
-  width: 450px;
   height: 120px;
   background-color: #f5f4fa;
   background-image: url("../images/studio/features/astronaut 1.svg");
@@ -683,6 +708,10 @@ body {
   padding-top: 0px;
 }
 
+.work .container {
+  display: block;
+}
+
 .work-list {
   display: flex;
 }
@@ -729,8 +758,8 @@ body {
 
 .team {
   background-color: #f5f4fa;
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .team .container {
@@ -770,9 +799,69 @@ body {
   color: #757575;
 }
 
+@media screen and (min-width: 480px) {
+  .team {
+    padding-bottom: 60px;
+  }
+  .team-list:not(:last-child) {
+    margin-bottom: 30px;
+  }
+  .team .section-title {
+    font-weight: bold;
+    font-size: 28px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    color: #000000;
+    text-align: center;
+    margin: 0;
+    padding-top: 60px;
+    padding-bottom: 30px;
+  }
+  .social-list {
+    padding-bottom: 24px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .team-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .team-list-item {
+    width: 354px;
+  }
+  .team-list-item:nth-child(-n + 2) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-list {
+    display: flex;
+  }
+  .team-list__item {
+    width: 270px;
+  }
+  .team-list__item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
 .clients-list {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.clients-list__item {
+  width: 210px;
+}
+
+.clients-list__item:nth-child(-n + 4) {
+  margin-bottom: 30px;
+}
+
+.clients-list__item:nth-child(2n) {
+  margin-left: 30px;
 }
 
 .clients-list__link {
@@ -782,7 +871,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 170px;
+  width: 210px;
   height: 90px;
   border-radius: 4px;
   border: 1px solid #afb1b8;
@@ -809,6 +898,37 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 250ms;
   fill: #2196f3;
+}
+
+@media screen and (min-width: 480px) {
+  .clients-list {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: space-around;
+  }
+  .clients-list-item:nth-child(-n + 4) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .clients-list-item {
+    width: 354px;
+  }
+  .clients-list-item:nth-child(-n + 3) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-list {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .footer {
