--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -3,10 +3,15 @@
   flex-wrap: wrap;
 
   &__item {
-    width: 354px;
+    width: 210px;
   }
+
   &__item:nth-child(-n + 4) {
     margin-bottom: 30px;
+  }
+
+  &__item:nth-child(2n) {
+    margin-left: 30px;
   }
 
   &__link {
@@ -16,7 +21,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 170px;
+    width: 210px;
     height: 90px;
     border-radius: 4px;
     border: 1px solid #afb1b8;
@@ -51,10 +56,9 @@
   .clients-list {
     display: flex;
     flex-wrap: wrap;
-    &__item {
-      width: 354px;
-    }
-    &__item:nth-child(-n + 4) {
+    align-content: space-around;
+
+    &-item:nth-child(-n + 4) {
       margin-bottom: 30px;
     }
   }
