--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,11 @@ body {
   .container {
     width: 768px;
   }
+  .clients .container {
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 0px;
+  }
   .page-header .container,
   .features .container,
   .footer .container {
@@ -762,11 +767,6 @@ body {
   padding-bottom: 60px;
 }
 
-.team .container {
-  padding-left: 0px;
-  padding-right: 0px;
-}
-
 .name-position {
   background-color: #ffffff;
   padding-top: 30px;
@@ -803,7 +803,11 @@ body {
   .team {
     padding-bottom: 60px;
   }
-  .team-list:not(:last-child) {
+  .container .team {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  .team-list__item:not(:last-child) {
     margin-bottom: 30px;
   }
   .team .section-title {
@@ -823,14 +827,21 @@ body {
 }
 
 @media screen and (min-width: 768px) {
+  .container .team {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
   .team-list {
     display: flex;
     flex-wrap: wrap;
   }
-  .team-list-item {
+  .team-list__item {
     width: 354px;
   }
-  .team-list-item:nth-child(-n + 2) {
+  .team-list__item:nth-child(2n + 1) {
+    margin-right: 30px;
+  }
+  .team-list__item:nth-child(-n + 2) {
     margin-bottom: 30px;
   }
 }
@@ -850,18 +861,6 @@ body {
 .clients-list {
   display: flex;
   flex-wrap: wrap;
-}
-
-.clients-list__item {
-  width: 210px;
-}
-
-.clients-list__item:nth-child(-n + 4) {
-  margin-bottom: 30px;
-}
-
-.clients-list__item:nth-child(2n) {
-  margin-left: 30px;
 }
 
 .clients-list__link {
@@ -900,14 +899,23 @@ body {
   fill: #2196f3;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .clients-list {
     display: flex;
     flex-wrap: wrap;
     align-content: space-around;
   }
-  .clients-list-item:nth-child(-n + 4) {
+  .clients-list__item {
+    width: 210px;
+  }
+  .clients-list__item:nth-child(2n) {
+    margin-left: 30px;
+  }
+  .clients-list__item:nth-child(-n + 4) {
     margin-bottom: 30px;
+  }
+  .clients-list__link {
+    width: 210px;
   }
 }
 
@@ -915,19 +923,30 @@ body {
   .clients-list {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
   }
-  .clients-list-item {
-    width: 354px;
+  .clients-list__item {
+    width: 226px;
   }
-  .clients-list-item:nth-child(-n + 3) {
+  .clients-list__item:nth-child(-n + 3) {
     margin-bottom: 30px;
+  }
+  .clients-list__link {
+    width: 226px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .clients-list {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
+  }
+  .clients-list__item {
+    width: 170px;
+  }
+  .clients-list__link {
+    width: 170px;
   }
 }
 
