--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -78,6 +78,11 @@ body {
 
 @media screen and (min-width: 768px) {
   .container {
+    .clients & {
+      padding-left: 15px;
+      padding-right: 15px;
+      padding-bottom: 0px;
+    }
     width: 768px;
     .page-header &,
     .features &,
