--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -2,11 +2,6 @@
   background-color: $secondary-background-color;
   padding-top: 60px;
   padding-bottom: 60px;
-
-  .container {
-    padding-left: 0px;
-    padding-right: 0px;
-  }
 }
 
 .name-position {
@@ -47,8 +42,12 @@
 
 @media screen and (min-width: 480px) {
   .team {
+    .container & {
+      padding-left: 0px;
+      padding-right: 0px;
+    }
     padding-bottom: 60px;
-    &-list:not(:last-child) {
+    &-list__item:not(:last-child) {
       margin-bottom: 30px;
     }
 
@@ -73,14 +72,21 @@
 
 @media screen and (min-width: 768px) {
   .team {
+    .container & {
+      padding-left: 15px;
+      padding-right: 15px;
+    }
     &-list {
       display: flex;
       flex-wrap: wrap;
 
-      &-item {
+      &__item {
         width: 354px;
+        &:nth-child(2n + 1) {
+          margin-right: 30px;
+        }
       }
-      &-item:nth-child(-n + 2) {
+      &__item:nth-child(-n + 2) {
         margin-bottom: 30px;
       }
     }
