--- a/css/main.css
+++ b/css/main.css
@@ -952,12 +952,10 @@ body {
 
 .footer {
   background: #2f303a;
-  padding-top: 60px;
-  padding-bottom: 60px;
+  text-align: center;
 }
 
 .footer-subtitle {
-  margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
@@ -967,9 +965,10 @@ body {
 }
 
 .footer .container {
-  display: flex;
   padding-left: 0px;
   padding-right: 0px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .footer .logo__item {
@@ -1009,12 +1008,15 @@ body {
 }
 
 .footer-social-list {
+  margin-top: 60px;
   margin-left: 70px;
   margin-right: 93px;
 }
 
 .footer-social-list .social-list {
   display: flex;
+  padding-bottom: 0px;
+  justify-content: center;
 }
 
 .footer-social-list .social-list__svg {
@@ -1057,8 +1059,8 @@ body {
   fill: #fff;
 }
 
-.sign-news {
-  margin-left: 93px;
+.sign-to-news {
+  margin-top: 60px;
 }
 
 .sign-label {
@@ -1085,6 +1087,7 @@ body {
 }
 
 .sign-btn {
+  margin-top: 20px;
   display: inline-flex;
   align-items: center;
   padding: 10px 28px;
@@ -1107,5 +1110,14 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .features .subtitle {
+    text-align: center;
+  }
+  .features-list-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
