--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -92,8 +92,7 @@ body {
     padding-bottom: 0px;
   }
   .page-header .container,
-  .features .container,
-  .footer .container {
+  .features .container {
     display: flex;
   }
 }
@@ -558,7 +557,7 @@ body {
 
 .sign-btn::after {
   margin-left: 10px;
-  content: "";
+  content: '';
   display: inline-block;
   width: 24px;
   height: 24px;
@@ -568,12 +567,167 @@ body {
   background-size: cover;
 }
 
-@media screen and (min-width: 480px) and (max-width: 767px) {
-  .features .subtitle {
-    text-align: center;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer-social-list {
+    margin-top: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
   }
-  .features-list-item:not(:last-child) {
-    margin-bottom: 30px;
+  .contacts-social {
+    display: flex;
+    justify-content: space-around;
+  }
+  .sign-input {
+    display: block;
+    margin-right: 152px;
+    margin-left: 166px;
+    width: 450px;
+  }
+  .sign-form {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-social {
+    display: flex;
+  }
+  .footer {
+    background: #2f303a;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    text-align: start;
+  }
+  .footer-subtitle {
+    margin-top: 0px;
+  }
+  .footer .container {
+    display: flex;
+    padding-top: 0;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  .footer .logo__item {
+    color: #ffffff;
+  }
+  .footer .tel-link,
+  .footer .mail-link {
+    font-weight: 400;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+  }
+  .footer .tel-link:hover, .footer .tel-link:focus,
+  .footer .mail-link:hover,
+  .footer .mail-link:focus {
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+    color: #2196f3;
+  }
+  .address {
+    margin-top: 20px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: #ffffff;
+  }
+  .address .link {
+    display: inline-block;
+    margin-top: 9px;
+  }
+  .footer-social-list {
+    margin-top: 0px;
+    margin-left: 70px;
+    margin-right: 93px;
+  }
+  .footer-social-list .social-list {
+    display: flex;
+  }
+  .footer-social-list .social-list__svg {
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+    fill: #fff;
+    width: 20px;
+    height: 20px;
+  }
+  .footer-social-list .social-list__item:not(:last-child) {
+    margin-right: 10px;
+  }
+  .footer-social-list .social-list__link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.1);
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+  }
+  .footer-social-list .social-list__link:hover, .footer-social-list .social-list__link:focus {
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+    background-color: #2196f3;
+  }
+  .footer-social-list .social-list__link:hover .social-list-svg, .footer-social-list .social-list__link:focus .social-list-svg {
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+    fill: #fff;
+  }
+  .sign-to-news {
+    margin-top: 0px;
+  }
+  .sign-label {
+    margin-bottom: 20px;
+    display: block;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+    color: #ffffff;
+  }
+  .sign-input {
+    margin-right: 12px;
+    padding: 15px;
+    width: 358px;
+    height: 50px;
+    color: #ffffff;
+    background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-sizing: border-box;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+  }
+  .sign-btn {
+    margin-top: 0px;
+    display: inline-flex;
+    align-items: center;
+    padding: 10px 28px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    color: #ffffff;
+    background: #2196f3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+  }
+  .sign-btn::after {
+    margin-left: 10px;
+    content: '';
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    background-image: url(../images/svg/send.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
   }
 }
 /*# sourceMappingURL=portfolio.css.map */
