--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -85,8 +85,7 @@ body {
     }
     width: 768px;
     .page-header &,
-    .features &,
-    .footer & {
+    .features & {
       display: flex;
     }
   }
