--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -147,7 +147,7 @@
 
   &::after {
     margin-left: 10px;
-    content: "";
+    content: '';
     display: inline-block;
     width: 24px;
     height: 24px;
@@ -158,15 +158,189 @@
   }
 }
 
-@media screen and (min-width: 480px) and (max-width: 767px) {
-  .features {
-    .subtitle {
-      text-align: center;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer {
+    &-social-list {
+      margin-top: 0px;
+      margin-left: 0px;
+      margin-right: 0px;
     }
-    &-list {
-      &-item:not(:last-child) {
-        margin-bottom: 30px;
+  }
+
+  .contacts-social {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .sign-input {
+    display: block;
+    margin-right: 152px;
+    margin-left: 166px;
+    width: 450px;
+  }
+  .sign-form {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-social {
+    display: flex;
+  }
+
+  .footer {
+    background: $dark-background-color;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    text-align: start;
+
+    &-subtitle {
+      margin-top: 0px;
+    }
+
+    .container {
+      display: flex;
+      padding-top: 0;
+      padding-left: 0px;
+      padding-right: 0px;
+    }
+
+    .logo__item {
+      color: $white-text-color;
+    }
+
+    .tel-link,
+    .mail-link {
+      font-weight: 400;
+      line-height: 1.71;
+      letter-spacing: 0.03em;
+      color: rgba(255, 255, 255, 0.6);
+
+      &:hover,
+      &:focus {
+        transition-property: all;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-duration: 250ms;
+        color: $accent-color;
       }
+    }
+  }
+
+  .address {
+    margin-top: 20px;
+
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: $white-text-color;
+
+    .link {
+      display: inline-block;
+      margin-top: 9px;
+    }
+  }
+
+  .footer-social-list {
+    margin-top: 0px;
+    margin-left: 70px;
+    margin-right: 93px;
+
+    .social-list {
+      display: flex;
+
+      &__svg {
+        transition-property: all;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-duration: 250ms;
+        fill: #fff;
+        width: 20px;
+        height: 20px;
+      }
+
+      &__item:not(:last-child) {
+        margin-right: 10px;
+      }
+
+      &__link {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 44px;
+        height: 44px;
+        border-radius: 50%;
+        background-color: rgba(255, 255, 255, 0.1);
+        transition-property: all;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-duration: 250ms;
+
+        &:hover,
+        &:focus {
+          transition-property: all;
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-duration: 250ms;
+          background-color: $accent-color;
+
+          .social-list-svg {
+            transition-property: all;
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            transition-duration: 250ms;
+            fill: #fff;
+          }
+        }
+      }
+    }
+  }
+
+  .sign-to-news {
+    margin-top: 0px;
+  }
+
+  .sign-label {
+    margin-bottom: 20px;
+    display: block;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+    color: $white-text-color;
+  }
+  .sign-input {
+    margin-right: 12px;
+    padding: 15px;
+    width: 358px;
+    height: 50px;
+    color: $white-text-color;
+    background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-sizing: border-box;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+  }
+  .sign-btn {
+    margin-top: 0px;
+    display: inline-flex;
+    align-items: center;
+    padding: 10px 28px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    color: $white-text-color;
+    background: $accent-color;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+
+    &::after {
+      margin-left: 10px;
+      content: '';
+      display: inline-block;
+      width: 24px;
+      height: 24px;
+      background-image: url(../images/svg/send.svg);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
     }
   }
 }
