--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -281,19 +281,37 @@ body {
   color: #ffffff;
 }
 
-.main-nav {
+.page-header {
+  position: relative;
   display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+.page-header .link {
+  display: block;
+}
+
+.page-header .tel-link,
+.page-header .mail-link {
   align-items: center;
 }
 
-.main-nav .contacts {
+.main-nav {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.main-nav .contacts {
   margin-left: auto;
+  margin-top: 60px;
 }
 
 .navigation {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .navigation .current {
@@ -303,7 +321,7 @@ body {
 }
 
 .navigation .current::after {
-  content: "";
+  content: '';
   position: absolute;
   left: 0;
   bottom: 0;
@@ -314,31 +332,15 @@ body {
   border-radius: 2px;
 }
 
-.navigation__list {
-  display: flex;
-  margin-left: 93px;
-}
-
-.navigation__list-item:not(:last-child) {
-  margin-right: 50px;
-}
-
 .navigation__list-link {
+  padding-bottom: 8px;
   display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
   letter-spacing: 0.02em;
   color: #212121;
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 250ms;
-}
-
-.contacts__item:not(:last-child) {
-  margin-right: 30px;
 }
 
 .navigation__list-link:hover,
@@ -369,6 +371,219 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 250ms;
   fill: #2196f3;
+}
+
+@media screen and (max-width: 767px) {
+  .page-header {
+    position: fixed;
+    border-bottom: 1px solid #ececec;
+    height: 60px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 10;
+    background-color: #fff;
+  }
+  body {
+    padding-top: 60px;
+  }
+  .navigation__list-link {
+    font-size: 18px;
+    line-height: 1.17;
+  }
+  .navigation__list-item:not(:last-child) {
+    margin-bottom: 40px;
+  }
+  .mail-link,
+  .tel-link {
+    font-size: 18px;
+    line-height: 1.17;
+  }
+  .tel-link {
+    margin-top: 16px;
+  }
+  .header-icon {
+    margin-right: 10px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .page-header .container {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  .page-header .link {
+    display: flex;
+  }
+  .main-nav {
+    display: flex;
+    align-items: center;
+  }
+  .main-nav .contacts {
+    margin-left: auto;
+    margin-top: 0px;
+  }
+  .main-nav .contacts__item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+  .navigation {
+    display: flex;
+    align-items: center;
+  }
+  .navigation .current {
+    display: block;
+    position: relative;
+    color: #2196f3;
+  }
+  .navigation .current::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: #2196f3;
+    border-radius: 2px;
+  }
+  .navigation__list {
+    display: flex;
+    margin-left: 88px;
+    margin-right: 84px;
+  }
+  .navigation__list-item {
+    margin-bottom: 0px;
+  }
+  .navigation__list-item:not(:last-child) {
+    margin-right: 50px;
+  }
+  .navigation__list-link {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: #212121;
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+  }
+  .navigation__list-link:hover,
+  .navigation__list-link:focus,
+  .tel-link:hover,
+  .tel-link:focus,
+  .mail-link:hover,
+  .mail-link:focus {
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+    color: #2196f3;
+  }
+  .mail-link,
+  .tel-link {
+    font-size: 14px;
+    line-height: 1.14;
+  }
+  .heder-link-svg {
+    margin-right: 10px;
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+    fill: #757575;
+  }
+  .tel-link:hover .heder-link-svg,
+  .tel-link:focus .heder-link-svg,
+  .mail-link:hover .heder-link-svg,
+  .mail-link:focus .heder-link-svg {
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+    fill: #2196f3;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .main-nav {
+    display: flex;
+    align-items: center;
+  }
+  .main-nav .contacts {
+    display: flex;
+    margin-left: auto;
+    margin-top: 0px;
+  }
+  .navigation {
+    display: flex;
+    align-items: center;
+  }
+  .navigation .current {
+    display: block;
+    position: relative;
+    color: #2196f3;
+  }
+  .navigation .current::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: #2196f3;
+    border-radius: 2px;
+  }
+  .navigation__list {
+    display: flex;
+    margin-left: 93px;
+  }
+  .navigation__list-item:not(:last-child) {
+    margin-right: 50px;
+  }
+  .navigation__list-link {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: #212121;
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+  }
+  .contacts__item:not(:last-child) {
+    margin-right: 30px;
+  }
+  .navigation__list-link:hover,
+  .navigation__list-link:focus,
+  .tel-link:hover,
+  .tel-link:focus,
+  .mail-link:hover,
+  .mail-link:focus {
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+    color: #2196f3;
+  }
+  .heder-link-svg {
+    margin-right: 10px;
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+    fill: #757575;
+  }
+  .tel-link:hover .heder-link-svg,
+  .tel-link:focus .heder-link-svg,
+  .mail-link:hover .heder-link-svg,
+  .mail-link:focus .heder-link-svg {
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+    fill: #2196f3;
+  }
 }
 
 .filter-list {
