--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,16 +1,34 @@
+.page-header {
+  position: relative;
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  & .link {
+    display: block;
+  }
+
+  & .tel-link,
+  & .mail-link {
+    align-items: center;
+  }
+}
+
 .main-nav {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 
   .contacts {
-    display: flex;
     margin-left: auto;
+    margin-top: 60px;
   }
 }
 
 .navigation {
   display: flex;
   align-items: center;
+  justify-content: center;
 
   .current {
     display: block;
@@ -18,7 +36,7 @@
     color: $accent-color;
 
     &::after {
-      content: "";
+      content: '';
       position: absolute;
       left: 0;
       bottom: 0;
@@ -31,20 +49,10 @@
   }
 
   &__list {
-    display: flex;
-    margin-left: 93px;
-
-    &-item:not(:last-child) {
-      margin-right: 50px;
-    }
-
     &-link {
+      padding-bottom: 8px;
       display: block;
-      padding-top: 32px;
-      padding-bottom: 32px;
       font-weight: 500;
-      font-size: 14px;
-      line-height: 1.14;
       letter-spacing: 0.02em;
       color: $title-text-color;
       transition-property: all;
@@ -52,10 +60,6 @@
       transition-duration: 250ms;
     }
   }
-}
-
-.contacts__item:not(:last-child) {
-  margin-right: 30px;
 }
 
 .navigation__list-link:hover,
@@ -85,5 +89,248 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 250ms;
     fill: $accent-color;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .page-header {
+    position: fixed;
+    border-bottom: 1px solid #ececec;
+    height: 60px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 10;
+    background-color: #fff;
+  }
+
+  body {
+    padding-top: 60px;
+  }
+
+  .navigation__list {
+    &-link {
+      font-size: 18px;
+      line-height: 1.17;
+    }
+    &-item:not(:last-child) {
+      margin-bottom: 40px;
+    }
+  }
+
+  .mail-link,
+  .tel-link {
+    font-size: 18px;
+    line-height: 1.17;
+  }
+
+  & .tel-link {
+    margin-top: 16px;
+  }
+  .header-icon {
+    margin-right: 10px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .page-header {
+    .container {
+      padding-left: 0px;
+      padding-right: 0px;
+    }
+    & .link {
+      display: flex;
+    }
+  }
+  .main-nav {
+    display: flex;
+    align-items: center;
+
+    .contacts {
+      margin-left: auto;
+      margin-top: 0px;
+      &__item:not(:last-child) {
+        margin-bottom: 10px;
+      }
+    }
+  }
+
+  .navigation {
+    display: flex;
+    align-items: center;
+
+    .current {
+      display: block;
+      position: relative;
+      color: $accent-color;
+
+      &::after {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        display: block;
+        width: 100%;
+        height: 4px;
+        background-color: $accent-color;
+        border-radius: 2px;
+      }
+    }
+
+    &__list {
+      display: flex;
+      margin-left: 88px;
+      margin-right: 84px;
+      &-item {
+        margin-bottom: 0px;
+      }
+
+      &-item:not(:last-child) {
+        margin-right: 50px;
+      }
+
+      &-link {
+        display: block;
+        padding-top: 32px;
+        padding-bottom: 32px;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.02em;
+        color: $title-text-color;
+        transition-property: all;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-duration: 250ms;
+      }
+    }
+  }
+
+  .navigation__list-link:hover,
+  .navigation__list-link:focus,
+  .tel-link:hover,
+  .tel-link:focus,
+  .mail-link:hover,
+  .mail-link:focus {
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+    color: $accent-color;
+  }
+
+  .mail-link,
+  .tel-link {
+    font-size: 14px;
+    line-height: 1.14;
+  }
+
+  .heder-link-svg {
+    margin-right: 10px;
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+    fill: $primary-text-color;
+
+    .tel-link:hover &,
+    .tel-link:focus &,
+    .mail-link:hover &,
+    .mail-link:focus & {
+      transition-property: all;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+      transition-duration: 250ms;
+      fill: $accent-color;
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .main-nav {
+    display: flex;
+    align-items: center;
+
+    .contacts {
+      display: flex;
+      margin-left: auto;
+      margin-top: 0px;
+    }
+  }
+
+  .navigation {
+    display: flex;
+    align-items: center;
+
+    .current {
+      display: block;
+      position: relative;
+      color: $accent-color;
+
+      &::after {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        display: block;
+        width: 100%;
+        height: 4px;
+        background-color: $accent-color;
+        border-radius: 2px;
+      }
+    }
+
+    &__list {
+      display: flex;
+      margin-left: 93px;
+
+      &-item:not(:last-child) {
+        margin-right: 50px;
+      }
+
+      &-link {
+        display: block;
+        padding-top: 32px;
+        padding-bottom: 32px;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.02em;
+        color: $title-text-color;
+        transition-property: all;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-duration: 250ms;
+      }
+    }
+  }
+
+  .contacts__item:not(:last-child) {
+    margin-right: 30px;
+  }
+
+  .navigation__list-link:hover,
+  .navigation__list-link:focus,
+  .tel-link:hover,
+  .tel-link:focus,
+  .mail-link:hover,
+  .mail-link:focus {
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+    color: $accent-color;
+  }
+
+  .heder-link-svg {
+    margin-right: 10px;
+    transition-property: all;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 250ms;
+    fill: $primary-text-color;
+
+    .tel-link:hover &,
+    .tel-link:focus &,
+    .mail-link:hover &,
+    .mail-link:focus & {
+      transition-property: all;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+      transition-duration: 250ms;
+      fill: $accent-color;
+    }
   }
 }
