Добавляет modal-form

--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -3,8 +3,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
   background-color: $primary-background-color;
   transition: all 500ms linear 500ms;
 }
@@ -40,5 +40,12 @@
       transform: translate(-50%, -50%) scale(0);
       transition: all 500ms linear 0ms;
     }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
   }
 }
