--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -40,7 +40,7 @@
   }
 }
 
-@media screen and (min-width: 480px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .clients-list {
     &__item {
       width: 210px;
