--- a/css/main.css
+++ b/css/main.css
@@ -306,8 +306,8 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
   background-color: #ffffff;
   transition: all 500ms linear 500ms;
 }
@@ -346,12 +346,19 @@ body {
   transition: all 500ms linear 0ms;
 }
 
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
+}
+
 .modal-form {
   display: flex;
   padding: 40px;
   flex-direction: column;
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
 }
 
 .modal-form .section-title {
@@ -438,19 +445,18 @@ body {
 }
 
 .modal-policy-field {
-  display: flex;
   align-items: center;
   justify-content: center;
   margin-bottom: 30px;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--main-text-color);
 }
 
 .modal-policy-field::before {
-  content: "";
+  content: '';
   display: inline-block;
   margin-right: 8px;
   width: 16px;
@@ -484,6 +490,16 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border-color: transparent;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-form {
+    width: 528px;
+    height: 581px;
+  }
+  .modal-policy-field {
+    font-size: 14px;
+  }
 }
 
 .page-header {
@@ -1176,7 +1192,7 @@ body {
   fill: #2196f3;
 }
 
-@media screen and (min-width: 480px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .clients-list {
     display: flex;
     flex-wrap: wrap;
