--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -2,8 +2,8 @@
   display: flex;
   padding: 40px;
   flex-direction: column;
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
 
   .section-title {
     margin-bottom: 12px;
@@ -90,18 +90,17 @@
   color: $accent-color;
 
   &-field {
-    display: flex;
     align-items: center;
     justify-content: center;
     margin-bottom: 30px;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 12px;
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--main-text-color);
 
     &::before {
-      content: "";
+      content: '';
       display: inline-block;
       margin-right: 8px;
       width: 16px;
@@ -137,4 +136,16 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border-color: transparent;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-form {
+    width: 528px;
+    height: 581px;
+  }
+  .modal-policy {
+    &-field {
+      font-size: 14px;
+    }
+  }
 }
