--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -17,20 +17,27 @@
   }
 }
 
-@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px), screen and (min-resolution: 192dpi) and (max-width: 767px), screen and (min-resolution: 2dppx) and (max-width: 767px) {
-  .hero-bg {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/studio/hero/bg-mobile@2x.jpg");
+@media screen and (max-width: 767px) {
+  .hero {
+    &-bg {
+      flex-grow: 1;
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('../images/studio/hero/bg-mobile.jpg');
+      background-repeat: no-repeat;
+      background-size: cover;
+
+      padding-top: 118px;
+      padding-bottom: 118px;
+    }
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  .hero-bg {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/studio/hero/bg-mobile.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-
-    padding-top: 118px;
-    padding-bottom: 118px;
+@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
+  screen and (min-resolution: 192dpi) and (max-width: 767px),
+  screen and (min-resolution: 2dppx) and (max-width: 767px) {
+  .hero {
+    &-bg {
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('../images/studio/hero/bg-mobile@2x.jpg');
+    }
   }
 }
 
@@ -38,17 +45,19 @@
   .hero {
     &-bg {
       flex-grow: 1;
-      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/studio/hero/bg-tablet.jpg");
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('../images/studio/hero/bg-tablet.jpg');
       background-repeat: no-repeat;
       background-size: cover;
     }
   }
 }
 
-@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px), screen and (min-resolution: 192dpi) and (min-width: 768px), screen and (min-resolution: 2dppx) and (min-width: 768px) {
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
+  screen and (min-resolution: 192dpi) and (min-width: 768px),
+  screen and (min-resolution: 2dppx) and (min-width: 768px) {
   .hero {
     &-bg {
-      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/studio/hero/bg-tablet@2x.jpg");
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('../images/studio/hero/bg-tablet@2x.jpg');
     }
   }
 }
@@ -60,7 +69,7 @@
       max-width: 1600px;
       padding-bottom: 200px;
       padding-bottom: 206px;
-      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/studio/hero/bg-desktop.jpg");
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('../images/studio/hero/bg-desktop.jpg');
     }
 
     &-title {
@@ -70,10 +79,12 @@
   }
 }
 
-@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px), screen and (min-resolution: 192dpi) and (min-width: 1200px), screen and (min-resolution: 2dppx) and (min-width: 1200px) {
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
+  screen and (min-resolution: 192dpi) and (min-width: 1200px),
+  screen and (min-resolution: 2dppx) and (min-width: 1200px) {
   .hero {
-    &-right-side {
-      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/studio/hero/bg-desktop@2x.jpg");
+    &-bg {
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('../images/studio/hero/bg-desktop@2x.jpg');
     }
   }
 }
