--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -40,7 +40,28 @@
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 479px) {
+  .clients-list {
+    display: flex;
+    flex-wrap: wrap;
+    &__item {
+      width: calc((100% - 60px) / 2);
+    }
+    &__item:nth-child(2n) {
+      margin-left: 30px;
+    }
+
+    &__item:nth-child(-n + 4) {
+      margin-bottom: 30px;
+    }
+
+    &__link {
+      width: 210px;
+    }
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .clients-list {
     &__item {
       width: 210px;
