--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -71,7 +71,8 @@ body {
   .team .container {
     min-width: 450px;
   }
-  .page-header .container {
+  .page-header .container,
+  .footer .container {
     width: 100%;
   }
 }
