--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -64,7 +64,8 @@ body {
     .team & {
       min-width: 450px;
     }
-    .page-header & {
+    .page-header &,
+    .footer & {
       width: 100%;
     }
   }
