--- a/css/main.css
+++ b/css/main.css
@@ -748,6 +748,7 @@ body {
   }
   .main-nav .contacts {
     display: flex;
+    align-items: center;
     margin-left: auto;
     margin-top: 0px;
   }
